tests/positive/phase2/024_char_escape.c
// TEST: char_escape
// DESCRIPTION: Character escape sequences
// EXPECTED_EXIT: 10
// ENVIRONMENT: hosted
// PHASE: 2
// STANDARD_REF: 6.4.4.4 (Character constants)

int main(void) {
    char c = '\n';
    return c;
}
